# ocean-renderer

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: base_fs.glsl  base_vs.glsl
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.cpp  precompiled.hpp
src/core/: localFile.cpp  localFile.hpp
src/core/camera/: camera.cpp  camera.hpp
src/shaders/: base.frag  base.vert  shader.cpp  shader.hpp
